--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gonzalocu/basecamp-php",
+    "name": "netvlies/basecamp-php",
     "description": "The Basecamp API makes it easy for developers to communicate with the 37signals Basecamp platform",
     "type": "library",
     "keywords": ["basecamp", "37signals", "api"],
