--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-bugfix": "1.0.x-dev"
         }
     }
 }
